[package]
name = "polkadot-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
prometheus = "0.13"
warp = "0.3"
log = "0.4"
env_logger = "0.10"