[package]
name = "substratheus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
base58 = "0.2.0"
blake2 = "0.10.6"
clap = { version = "^4.5.4", features = ["derive"] }
log = "0.4.21"
prometheus-client = "0.22.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
subxt = "0.44.0"
tide = "0.16.0"
env_logger = "0.11"
tokio = "1.49.0"
async-ctrlc = "1"
scale-decode = "0.16"